--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(index.jpg);
+  background-image: url(/index.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
