--- a/src/game.css
+++ b/src/game.css
@@ -155,3 +155,20 @@ body {
   background: rgba(192, 147, 49, 0.5);
   pointer-events: none;
 }
+
+.quiz__result {
+  display: none;
+  flex-grow: 1;
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.quiz__result-info{
+  font-size: 32px;
+  font-weight: 400;
+  margin-bottom: 32px;
+}
+.quiz__result-num{
+  font-weight: 700;
+  font-size: 48 px;
+}
